--- a/index.html
+++ b/index.html
@@ -51,15 +51,22 @@
 
   <section id="contacto" class="section contacto">
     <h2>Contacto</h2>
-    <form>
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre" required>
-      <label for="email">Correo electrónico:</label>
-      <input type="email" id="email" name="email" required>
-      <label for="mensaje">Mensaje:</label>
-      <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
-      <button type="submit">Enviar mensaje</button>
-    </form>
+<form action="https://formsubmit.co/franciscofotografo1212@gmail.com" method="POST">
+  <label for="nombre">Nombre:</label>
+  <input type="text" id="nombre" name="nombre" required>
+
+  <label for="email">Correo electrónico:</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="mensaje">Mensaje:</label>
+  <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+
+  <button type="submit">Enviar mensaje</button>
+
+  <!-- Opcionales: evitar spam y redirigir después del envío -->
+  <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_next" value="https://tu-sitio.com/gracias.html">
+</form>
   </section>
 
   <footer>
