--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <!-- Evita captcha y redirige al enviar -->
   <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_next" value="gracias.html">
+  <input type="hidden" name="_next" value="https://franciscoalarcon.github.io/mi-portafolio/gracias.html">
  </form> 
   </section>
 
