--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <section id="sobre-mi" class="section">
     <h2>Sobre mí</h2>
-    <p>¡Hola! Soy Francisco Alarcon un fotógrafo apasionado por capturar emociones y contar historias visuales. Trabajo en retratos, bodas y fotografía artística. Cada imagen que capturo busca transmitir belleza, autenticidad y alma.</p>
+    <p>¡Hola! Soy Francisco Alarcon un fotógrafo apasionado por capturar emociones y contar historias visuales. Trabajo en retratos, bodas . Cada imagen que capturo busca transmitir belleza, autenticidad y alma.</p>
   </section>
 
   <section id="galeria" class="section">
