--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <section id="contacto" class="section contacto">
     <h2>Contacto</h2>
-    <form action="https://formsubmit.co/franciscofotografo1212@gmail.com" method="POST">
+    <form action="https://formsubmit.co/nataalarcon33@gmail.com"method="POST">
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" name="nombre" required>
 
