--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Mi Portafolio de Fotografía</h1>
-    <p>Especialista en retratos, bodas y fotografía artística</p>
+    <p>Fotografo apacionado con su trabajo</p>
     <nav>
       <a href="#sobre-mi">Sobre mí</a>
       <a href="#galeria">Galería</a>
@@ -20,7 +20,7 @@
 
   <section id="sobre-mi" class="section">
     <h2>Sobre mí</h2>
-    <p>¡Hola! Soy Francisco Alarcon un fotógrafo apasionado por capturar emociones y contar historias visuales. Trabajo en retratos, bodas y fotografía artística. Cada imagen que capturo busca transmitir belleza, autenticidad y alma.</p>
+    <p>¡Hola! Soy Francisco Alarcon un fotógrafo apasionado por capturar emociones y contar historias visuales. Trabajo en retratos, bodas y evento sociales. Cada imagen que capturo busca transmitir belleza, autenticidad y alma.</p>
   </section>
 
   <section id="galeria" class="section">
