--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </section>
 
   <section id="galeria" class="section">
-    <h2>Galería Expandible</h2>
+    <h2>My book</h2>
 
     <div class="album">
       <h3>Sesión al aire libre</h3>
