--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
   <header>
-    <h1>Mi Portafolio de Fotografía</h1>
-    <p>Fotografo apacionado con su trabajo</p>
-    <nav>
-      <a href="#sobre-mi">Sobre mí</a>
-      <a href="#galeria">Galería</a>
-      <a href="#contacto">Contacto</a>
-    </nav>
-  </header>
-
+  <img src="img/logo-francisco.png" alt="Logo Francisco Alarcon" class="logo">
+  <h1>Mi Portafolio de Fotografía</h1>
+  <p>Especialista en retratos, bodas y fotografía artística</p>
+  <nav>
+    <a href="#sobre-mi">Sobre mí</a>
+    <a href="#galeria">Galería</a>
+    <a href="#contacto">Contacto</a>
+  </nav>
+</header>
   <section id="sobre-mi" class="section">
     <h2>Sobre mí</h2>
     <p>¡Hola! Soy Francisco Alarcon un fotógrafo apasionado por capturar emociones y contar historias visuales. Trabajo en retratos, bodas y evento sociales. Cada imagen que capturo busca transmitir belleza, autenticidad y alma.</p>
