--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
     <div class="album">
       <h3>Sesión al aire libre</h3>
-      <a href="fotos/foto1.jpg" data-lightbox="playa"><img src="fotos/foto1.jpg" alt="Foto 1"></a>
-      <button class="mostrar-btn" data-target="playa">Ver más</button>
-      <div class="imagenes-ocultas" id="playa">
+      <a href="fotos/foto1.jpg" data-lightbox="aire libre"><img src="fotos/foto1.jpg" alt="Foto 1"></a>
+      <button class="mostrar-btn" data-target="aire libre">Ver más</button>
+      <div class="imagenes-ocultas" id="aire libre">
         <a href="fotos/foto2.jpg" data-lightbox="Aire libre"><img src="fotos/foto2.jpg" alt="foto2"></a>
         <a href="fotos/foto3.jpg" data-lightbox="Aire libre"><img src="fotos/foto3.jpg" alt="foto3"></a>
         <a href="fotos/foto4.jpg" data-lightbox="Aire libre"><img src="fotos/foto4.jpg" alt="foto4"></a>
