--- a/index.html
+++ b/index.html
@@ -4,31 +4,13 @@
   <link rel="icon" href="img/logo-francisco.png" type="image/png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Francisco Alarcón | Fotógrafo Profesional</title>
+  <title>Francisco Alarcon | Fotógrafo Profesional</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
-  <style>
-    .imagenes-ocultas {
-      display: none;
-    }
-
-    .imagenes-ocultas.visible {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      margin-top: 10px;
-    }
-
-    .imagenes-ocultas img {
-      width: 300px;
-      height: auto;
-      border-radius: 10px;
-    }
-  </style>
 </head>
 <body>
   <header>
-    <img src="img/logo-francisco.png" alt="Logo Francisco Alarcón" class="logo">
+    <img src="img/logo-francisco.png" alt="Logo Francisco Alarcon" class="logo">
     <h1>Mi Portafolio de Fotografía</h1>
     <p>Especialista en retratos, bodas y fotografía artística</p>
     <nav>
@@ -40,35 +22,33 @@
 
   <section id="sobre-mi" class="section">
     <h2>Sobre mí</h2>
-    <p>¡Hola! Soy Francisco Alarcón, un fotógrafo apasionado por capturar emociones y contar historias visuales. Trabajo en retratos, bodas y eventos sociales. Cada imagen que capturo busca transmitir belleza, autenticidad y alma.</p>
+    <p>¡Hola! Soy Francisco Alarcon, un fotógrafo apasionado por capturar emociones y contar historias visuales...</p>
   </section>
 
   <section id="galeria" class="section">
-    <h2>Mi portafolio</h2>
+    <h2>My book</h2>
 
     <div class="album">
       <h3>Sesión al aire libre</h3>
       <a href="fotos/foto1.jpg" data-lightbox="aire-libre">
-        <img src="fotos/foto1.jpg" alt="Sesión al aire libre en el bosque">
+        <img src="fotos/foto1.jpg" alt="..." class="foto-principal">
       </a>
       <button class="mostrar-btn" data-target="aire-libre">Ver más</button>
       <div class="imagenes-ocultas" id="aire-libre">
-        <a href="fotos/foto2.jpg" data-lightbox="aire-libre"><img src="fotos/foto2.jpg" alt="Modelo caminando en bosque iluminado"></a>
-        <a href="fotos/foto3.jpg" data-lightbox="aire-libre"><img src="fotos/foto3.jpg" alt="Retrato en exterior con luz natural"></a>
-        <a href="fotos/foto4.jpg" data-lightbox="aire-libre"><img src="fotos/foto4.jpg" alt="Posando con fondo natural"></a>
-        <a href="fotos/foto5.jpg" data-lightbox="aire-libre"><img src="fotos/foto5.jpg" alt="Atardecer con silueta artística"></a>
+        <a href="fotos/foto2.jpg" data-lightbox="Aire libre"><img src="fotos/foto2.jpg" alt="foto2"></a>
+        <a href="fotos/foto3.jpg" data-lightbox="Aire libre"><img src="fotos/foto3.jpg" alt="foto3"></a>
+        <a href="fotos/foto4.jpg" data-lightbox="Aire libre"><img src="fotos/foto4.jpg" alt="foto4"></a>
+        <a href="fotos/foto5.jpg" data-lightbox="Aire libre"><img src="fotos/foto5.jpg" alt="foto5"></a>
       </div>
     </div>
 
     <div class="album">
       <h3>Conciertos</h3>
-      <a href="fotos/boda1.jpg" data-lightbox="conciertos">
-        <img src="fotos/boda1.jpg" alt="Concierto con iluminación en vivo">
-      </a>
-      <button class="mostrar-btn" data-target="conciertos">Ver más</button>
-      <div class="imagenes-ocultas" id="conciertos">
-        <a href="fotos/boda2.jpg" data-lightbox="conciertos"><img src="fotos/boda2.jpg" alt="Guitarrista en pleno show"></a>
-        <a href="fotos/boda3.jpg" data-lightbox="conciertos"><img src="fotos/boda3.jpg" alt="Vista del escenario con luces"></a>
+      <a href="fotos/boda1.jpg" data-lightbox="boda"><img src="fotos/boda1.jpg" alt="Concierto1"></a>
+      <button class="mostrar-btn" data-target="boda">Ver más</button>
+      <div class="imagenes-ocultas" id="boda">
+        <a href="fotos/boda2.jpg" data-lightbox="boda"><img src="fotos/boda2.jpg" alt="concierto2"></a>
+        <a href="fotos/boda3.jpg" data-lightbox="boda"><img src="fotos/boda3.jpg" alt="concierto3"></a>
       </div>
     </div>
   </section>
@@ -78,22 +58,18 @@
     <form action="https://formsubmit.co/franciscofotografo1212@gmail.com" method="POST">
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" name="nombre" required>
-
       <label for="email">Correo electrónico:</label>
       <input type="email" id="email" name="email" required>
-
       <label for="mensaje">Mensaje:</label>
       <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
-
       <button type="submit">Enviar mensaje</button>
-
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_next" value="https://franph16.github.io/portafolio-francisco/gracias.html">
     </form>
   </section>
 
   <footer>
-    <p>&copy; 2025 Francisco Alarcón. Todos los derechos reservados.</p>
+    <p>&copy; 2025 Francisco Alarcon. Todos los derechos reservados.</p>
   </footer>
 
   <div style="position: fixed; bottom: 10px; right: 10px; font-size: 14px; color: #fff; background-color: rgba(0,0,0,0.7); padding: 5px 10px; border-radius: 8px;">
