--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <header>
     <img src="img/logo-francisco.png" alt="Logo Francisco Alarcon" class="logo">
-    <h1>Mi Portafolio de Fotografía</h1>
-    <p>Especialista en retratos, bodas y fotografía artística</p>
+    <br><h1>Mi Portafolio de Fotografía</h1>
+    <p>Especialista en retratos, bodas y fotografía artística</p></br>
     <nav>
       <a href="#sobre-mi">Sobre mí</a>
       <a href="#galeria">Galería</a>
