--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <link rel="icon" href="img/logo-francisco.png" type="image/png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Francisco Alarcon | Fotógrafo Profesional</title>
+  <title>Francisco Alarcon | Fotógrafo</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
 </head>
 <body>
   <header>
     <img src="img/logo-francisco.png" alt="Logo Francisco Alarcon" class="logo">
-    <div><h1>Mi Portafolio de Fotografía</h1></div>
-    <div><p>Especialista en retratos, bodas y fotografía artística</p></div>
+    <h1>Francisco Alarcon-Portafolio</h1>
+    <p>Especialista en retratos, bodas</p>
     <nav>
       <a href="#sobre-mi">Sobre mí</a>
       <a href="#galeria">Galería</a>
