--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
   <header>
     <img src="img/logo-francisco.png" alt="Logo Francisco Alarcon" class="logo">
-    <h1>Francisco Alarcon-Portafolio</h1>
-    <p>Especialista en retratos, bodas</p>
+    <section id="portafolio">
+     <h2> Francisco Alarcon-Portafolio </h2>
+     <p class= "especialidad">
+      Especialista en retrato, bodas </p>
+      </section>
     <nav>
       <a href="#sobre-mi">Sobre mí</a>
       <a href="#galeria">Galería</a>
