--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <img src="img/logo-francisco.png" alt="Logo Francisco Alarcon" class="logo">
+    <img src="img/logo-francisco.png" alt="Logo Francisco Alarcon" class="logo"></img>
     <section id="portafolio">
      <h1> Francisco Alarcon-Portafolio </h1>
      <p class= "especialidad">
