--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
         <a href="fotos/boda3.jpg" data-lightbox="boda"><img src="fotos/boda3.jpg" alt="concierto3"></a>
       </div>
     </div>
+
+    <div class="album">
+      <h3>Conciertos</h3>
+      <a href="fotos/sesion1.jpg" data-lightbox="sesion"><img src="fotos/sesion1.jpg" alt="sesion1"></a>
+      <button class="mostrar-btn" data-target="boda">Ver más</button>
+      <div class="imagenes-ocultas" id="sesion">
+        <a href="fotos/sesion2.jpg" data-lightbox="sesion"><img src="fotos/sesion2.jpg" alt="sesion2"></a>
+        <a href="fotos/sesion3.jpg" data-lightbox="sesion"><img src="fotos/sesion3.jpg" alt="sesion3"></a>
+        <a href="fotos/sesion4.jpg" data-lightbox="sesion"><img src="fotos/sesion4.jpg" alt="sesion4"></a>
+      </div>
+    </div>
   </section>
 
   <section id="contacto" class="section contacto">
