--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="album">
-      <h3>Conciertos</h3>
+      <h3>Sesión Estudio</h3>
       <a href="fotos/sesion1.jpg" data-lightbox="sesion"><img src="fotos/sesion1.jpg" alt="sesion1"></a>
       <button class="mostrar-btn" data-target="boda">Ver más</button>
       <div class="imagenes-ocultas" id="sesion">
