--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="album">
       <h3>Sesión Estudio</h3>
       <a href="fotos/sesion1.jpg" data-lightbox="sesion"><img src="fotos/sesion1.jpg" alt="sesion1"></a>
-      <button class="mostrar-btn" data-target="boda">Ver más</button>
+      <button class="mostrar-btn" data-target="sesion">Ver más</button>
       <div class="imagenes-ocultas" id="sesion">
         <a href="fotos/sesion2.jpg" data-lightbox="sesion"><img src="fotos/sesion2.jpg" alt="sesion2"></a>
         <a href="fotos/sesion3.jpg" data-lightbox="sesion"><img src="fotos/sesion3.jpg" alt="sesion3"></a>
