--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class="album">
       <h3>Sesión Estudio</h3>
-      <a href="fotos/sesion1.jpg" data-lightbox="sesion"><img src="fotos/sesion1.jpg" alt="sesion1"></a>
+      <a href="fotos/sesion1.jpg" data-lightbox="sesion"><img src="fotos/sesion1.jpg" alt="sesion1" class="foto-principal"></a>
       <button class="mostrar-btn" data-target="sesion">Ver más</button>
       <div class="imagenes-ocultas" id="sesion">
         <a href="fotos/sesion2.jpg" data-lightbox="sesion"><img src="fotos/sesion2.jpg" alt="sesion2"></a>
