--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <a href="fotos/sesion1.jpg" data-lightbox="sesion"><img src="fotos/sesion1.jpg" alt="sesion1" class="foto-principal"></a>
       <button class="mostrar-btn" data-target="sesion">Ver más</button>
       <div class="imagenes-ocultas" id="sesion">
-        <a href="fotos/sesion2.jpg" data-lightbox="sesion"><img src="fotos/sesion2.jpg" alt="sesion2"></a>
-        <a href="fotos/sesion3.jpg" data-lightbox="sesion"><img src="fotos/sesion3.jpg" alt="sesion3"></a>
-        <a href="fotos/sesion4.jpg" data-lightbox="sesion"><img src="fotos/sesion4.jpg" alt="sesion4"></a>
+        <a href="fotos/sesion2.jpg" data-lightbox="sesion-estudio"><img src="fotos/sesion2.jpg" alt="sesion2"></a>
+        <a href="fotos/sesion3.jpg" data-lightbox="sesion-estudio"><img src="fotos/sesion3.jpg" alt="sesion3"></a>
+        <a href="fotos/sesion4.jpg" data-lightbox="sesion-estudio"><img src="fotos/sesion4.jpg" alt="sesion4"></a>
       </div>
     </div>
   </section>
