--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <header>
     <img src="img/logo-francisco.png" alt="Logo Francisco Alarcon" class="logo">
     <section id="portafolio">
-     <h1> Francisco Alarcon-Portafolio </h1>
+     <h1> FranciscoPhotographer </h1>
      <p class= "especialidad">
-      Especialista en retrato, bodas </p>
+      Especialista en retrato,bodas y eventos sociales </p>
       </section>
     <nav>
       <a href="#sobre-mi">Sobre mí</a>
@@ -28,44 +28,135 @@
     <p>¡Hola! Soy Francisco Alarcon un fotógrafo apasionado por capturar emociones y contar historias visuales. Trabajo en retratos, bodas y eventos sociales. Cada imagen que capturo busca transmitir belleza, autenticidad y alma.</p>
   </section>
 
-  <section id="galeria" class="section">
-    <h2>Mi Book</h2>
-
-    <div class="album">
-      <h3>Sesión al aire libre</h3>
-      <a href="fotos/foto1.jpg" data-lightbox="aire-libre">
-        <img src="fotos/foto1.jpg" alt="Foto principal" class="foto-principal">
-      </a>
-      <button class="mostrar-btn" data-target="aire-libre">Ver más</button>
-      <div class="imagenes-ocultas" id="aire-libre">
-        <a href="fotos/foto2.jpg" data-lightbox="aire-libre"><img src="fotos/foto2.jpg" alt="foto2"></a>
-        <a href="fotos/foto3.jpg" data-lightbox="aire-libre"><img src="fotos/foto3.jpg" alt="foto3"></a>
-        <a href="fotos/foto4.jpg" data-lightbox="aire-libre"><img src="fotos/foto4.jpg" alt="foto4"></a>
-        <a href="fotos/foto5.jpg" data-lightbox="aire-libre"><img src="fotos/foto5.jpg" alt="foto5"></a>
-      </div>
+<section id="galeria-principal" class="section">
+  <h2>Galeria-Clientes</h2>
+  <div class="fotos-principales">
+    <a href="fotos/foto1.jpg" data-lightbox="principales">
+      <img src="fotos/foto1.jpg" alt="Foto 1">
+    </a>
+    <a href="fotos/foto2.jpg" data-lightbox="principales">
+      <img src="fotos/foto2.jpg" alt="Foto 2">
+    </a>
+    <a href="fotos/foto3.jpg" data-lightbox="principales">
+      <img src="fotos/foto3.jpg" alt="Foto 3">
+    </a>
+  </div>
+    <div class="fotos-principales">
+    <a href="fotos/sesion1.jpg" data-lightbox="principales">
+      <img src="fotos/sesion1.jpg" alt="Sesion 1">
+    </a>
+    <a href="fotos/sesion2.jpg" data-lightbox="principales">
+      <img src="fotos/sesion2.jpg" alt="Sesion 2">
+    </a>
+    <a href="fotos/sesion4.jpg" data-lightbox="principales">
+      <img src="fotos/sesion4.jpg" alt="Sesion 4">
+    </a>
+  </div>
+  <div class="fotos-principales">
+    <a href="fotos/foto1.jpg" data-lightbox="principales">
+      <img src="fotos/foto5.jpg" alt="Foto 5">
+    </a>
+    <a href="fotos/foto2.jpg" data-lightbox="principales">
+      <img src="fotos/foto6.jpg" alt="Foto 6">
+    </a>
+    <a href="fotos/foto3.jpg" data-lightbox="principales">
+      <img src="fotos/foto7.jpg" alt="Foto 7">
+    </a>
+      <div class="fotos-principales">
+    <a href="fotos/foto1.jpg" data-lightbox="principales">
+      <img src="fotos/foto8.jpg" alt="Foto 8">
+    </a>
+    <a href="fotos/foto2.jpg" data-lightbox="principales">
+      <img src="fotos/foto9.jpg" alt="Foto 9">
+    </a>
+    <a href="fotos/foto3.jpg" data-lightbox="principales">
+      <img src="fotos/foto10.jpg" alt="Foto 10">
+    </a>
+    <div class="fotos-principales">
+    <a href="fotos/foto22.jpg" data-lightbox="principales">
+      <img src="fotos/foto22.jpg" alt="Foto 22">
+    </a>
+    <a href="fotos/foto23.jpg" data-lightbox="principales">
+      <img src="fotos/foto23.jpg" alt="Foto 23">
+    </a>
+    <a href="fotos/foto24.jpg" data-lightbox="principales">
+      <img src="fotos/foto24.jpg" alt="Foto 24">
+    </a>
+  </div>
+  <div class="fotos-principales">
+    <a href="fotos/foto12.jpg" data-lightbox="principales">
+      <img src="fotos/foto12.jpg" alt="Foto 12">
+    </a>
+    <a href="fotos/foto13.jpg" data-lightbox="principales">
+      <img src="fotos/foto13.jpg" alt="Foto 13">
+    </a>
+    <a href="fotos/foto14.jpg" data-lightbox="principales">
+      <img src="fotos/foto14.jpg" alt="Foto 14">
+    </a>
+    <div class="fotos-principales">
+    <a href="fotos/foto15.jpg" data-lightbox="principales">
+      <img src="fotos/foto15.jpg" alt="Foto 15">
+    </a>
+    <a href="fotos/foto16.jpg" data-lightbox="principales">
+      <img src="fotos/foto16.jpg" alt="Foto 16">
+    </a>
+    <a href="fotos/foto17.jpg" data-lightbox="principales">
+      <img src="fotos/foto17.jpg" alt="Foto 17">
+    </a>
+    <div class="fotos-principales">
+    <a href="fotos/foto18.jpg" data-lightbox="principales">
+      <img src="fotos/foto18.jpg" alt="Foto 18">
+    </a>
+    <a href="fotos/foto19.jpg" data-lightbox="principales">
+      <img src="fotos/foto19.jpg" alt="Foto 19">
+    </a>
+    <a href="fotos/foto20.jpg" data-lightbox="principales">
+      <img src="fotos/foto20.jpg" alt="Foto 20">
+      <div class="fotos-principales">
+    <a href="fotos/foto21.jpg" data-lightbox="principales">
+      <img src="fotos/foto21.jpg" alt="Foto 21">
+    </a>
+    <a href="fotos/foto25.jpg" data-lightbox="principales">
+      <img src="fotos/foto25.jpg" alt="Foto 25">
+    </a>
+    <a href="fotos/foto26.jpg" data-lightbox="principales">
+      <img src="fotos/foto26.jpg" alt="Foto 26">
+    </a>
+    <div class="fotos-principales">
+    <a href="fotos/foto27.jpg" data-lightbox="principales">
+      <img src="fotos/foto27.jpg" alt="Foto 27">
+    </a>
+    <a href="fotos/foto28.jpg" data-lightbox="principales">
+      <img src="fotos/foto28.jpg" alt="Foto 28">
+    </a>
+    <a href="fotos/foto29.jpg" data-lightbox="principales">
+      <img src="fotos/foto29.jpg" alt="Foto 29">
+    </a>
+  </div>
+  <div class="fotos-principales">
+    <a href="fotos/foto30.jpg" data-lightbox="principales">
+      <img src="fotos/foto30.jpg" alt="Foto 30">
+    </a>
+    <a href="fotos/foto31.jpg" data-lightbox="principales">
+      <img src="fotos/foto31.jpg" alt="Foto 31">
+    </a>
+    <a href="fotos/foto32.jpg" data-lightbox="principales">
+      <img src="fotos/foto32.jpg" alt="Foto 32">
+    </a>
+  </div>
+    <div class="fotos-principales">
+    <a href="fotos/foto33.jpg" data-lightbox="principales">
+      <img src="fotos/foto33.jpg" alt="Foto 33">
+    </a>
+    <a href="fotos/foto34.jpg" data-lightbox="principales">
+      <img src="fotos/foto34.jpg" alt="Foto 34">
+    </a>
+    <a href="fotos/foto35.jpg" data-lightbox="principales">
+      <img src="fotos/foto35.jpg" alt="Foto 35">
+    </a>
+  </div>
     </div>
-
-    <div class="album">
-      <h3>Conciertos</h3>
-      <a href="fotos/boda1.jpg" data-lightbox="boda"><img src="fotos/boda1.jpg" alt="Concierto1"></a>
-      <button class="mostrar-btn" data-target="boda">Ver más</button>
-      <div class="imagenes-ocultas" id="boda">
-        <a href="fotos/boda2.jpg" data-lightbox="boda"><img src="fotos/boda2.jpg" alt="concierto2"></a>
-        <a href="fotos/boda3.jpg" data-lightbox="boda"><img src="fotos/boda3.jpg" alt="concierto3"></a>
-      </div>
-    </div>
-
-    <div class="album">
-      <h3>Sesión Estudio</h3>
-      <a href="fotos/sesion1.jpg" data-lightbox="sesion-estudio"><img src="fotos/sesion1.jpg" alt="sesion1" class="foto-principal"></a>
-      <button class="mostrar-btn" data-target="sesion">Ver más</button>
-      <div class="imagenes-ocultas" id="sesion">
-        <a href="fotos/sesion2.jpg" data-lightbox="sesion-estudio"><img src="fotos/sesion2.jpg" alt="sesion2"></a>
-        <a href="fotos/sesion3.jpg" data-lightbox="sesion-estudio"><img src="fotos/sesion3.jpg" alt="sesion3"></a>
-        <a href="fotos/sesion4.jpg" data-lightbox="sesion-estudio"><img src="fotos/sesion4.jpg" alt="sesion4"></a>
-      </div>
-    </div>
-  </section>
+</section>
 
   <section id="contacto" class="section contacto">
     <h2>Contacto</h2>
@@ -107,4 +198,3 @@
   </script>
 </body>
 </html>
-
