--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
       <input type="hidden" name="_next" value="https://franph16.github.io/portafolio-francisco/gracias.html">
     </form>
   </section>
+      
+  <section class="qr-section">
+    <h2>Escaneá el QR para ver mi portafolio</h2>
+    <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://franph16.github.io/portafolio-francisco/" alt="QR del portafolio">
+  </section>
 
   <footer>
     <p>&copy; 2025 Francisco Alarcon. Todos los derechos reservados.</p>
