--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </section>
     <nav>
       <a href="#sobre-mi">Sobre mí</a>
-      <a href="#galeria">Galería</a>
+      <a href="#galeria-principal">Galería</a>
       <a href="#contacto">Contacto</a>
     </nav>
   </header>
