--- a/index.html
+++ b/index.html
@@ -222,5 +222,6 @@
     window.scrollTo({ top: 0, behavior: "smooth" });
   });
 </script>
+<script src="cookies.js" defer></script>
 </body>
 </html>
