--- a/index.html
+++ b/index.html
@@ -222,7 +222,13 @@
     window.scrollTo({ top: 0, behavior: "smooth" });
   });
 </script>
-      
+
+<div id="cookie-consent" class="cookie-consent">
+  <p>Este sitio web usa cookies para mejorar tu experiencia. <a href="#">Más información</a>.</p>
+  <button id="accept-cookies">Aceptar</button>
+</div>
+
 <script src="cookies.js" defer></script>
 </body>
+
 </html>
