--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
 <section id="galeria-principal" class="section">
   <h2>Galeria-Clientes</h2>
   <div class="fotos-principales">
-    <a href="fotos/foto1.jpg" data-lightbox="principales">
-      <img src="fotos/foto1.jpg" alt="Foto 1">
+    <a href="fotos/foto1.webp" data-lightbox="principales">
+      <img src="fotos/foto1.webp" alt="Foto 1">
     </a>
-    <a href="fotos/foto2.jpg" data-lightbox="principales">
-      <img src="fotos/foto2.jpg" alt="Foto 2">
+    <a href="fotos/foto2.webp" data-lightbox="principales">
+      <img src="fotos/foto2.webp" alt="Foto 2">
     </a>
-    <a href="fotos/foto3.jpg" data-lightbox="principales">
-      <img src="fotos/foto3.jpg" alt="Foto 3">
+    <a href="fotos/foto3.webp" data-lightbox="principales">
+      <img src="fotos/foto3.webp" alt="Foto 3">
     </a>
   </div>
     <div class="fotos-principales">
-    <a href="fotos/sesion1.jpg" data-lightbox="principales">
-      <img src="fotos/sesion1.jpg" alt="Sesion 1">
+    <a href="fotos/foto36.webp" data-lightbox="principales">
+      <img src="fotos/foto36.webp" alt="Sesion 1">
     </a>
-    <a href="fotos/sesion2.jpg" data-lightbox="principales">
-      <img src="fotos/sesion2.jpg" alt="Sesion 2">
+    <a href="fotos/foto37.webp" data-lightbox="principales">
+      <img src="fotos/foto37.webp" alt="Sesion 2">
     </a>
-    <a href="fotos/sesion4.jpg" data-lightbox="principales">
-      <img src="fotos/sesion4.jpg" alt="Sesion 4">
+    <a href="fotos/foto38.webp" data-lightbox="principales">
+      <img src="fotos/foto38.webp" alt="Sesion 4">
     </a>
   </div>
   <div class="fotos-principales">
-    <a href="fotos/foto1.jpg" data-lightbox="principales">
-      <img src="fotos/foto5.jpg" alt="Foto 5">
+    <a href="fotos/foto5.webp" data-lightbox="principales">
+      <img src="fotos/foto5.webp" alt="Foto 5">
     </a>
-    <a href="fotos/foto2.jpg" data-lightbox="principales">
-      <img src="fotos/foto6.jpg" alt="Foto 6">
+    <a href="fotos/foto6.webp" data-lightbox="principales">
+      <img src="fotos/foto6.webp" alt="Foto 6">
     </a>
-    <a href="fotos/foto3.jpg" data-lightbox="principales">
-      <img src="fotos/foto7.jpg" alt="Foto 7">
+    <a href="fotos/foto7.webp" data-lightbox="principales">
+      <img src="fotos/foto7.webp" alt="Foto 7">
     </a>
       <div class="fotos-principales">
-    <a href="fotos/foto1.jpg" data-lightbox="principales">
-      <img src="fotos/foto8.jpg" alt="Foto 8">
+    <a href="fotos/foto8.webp" data-lightbox="principales">
+      <img src="fotos/foto8.webp" alt="Foto 8">
     </a>
-    <a href="fotos/foto2.jpg" data-lightbox="principales">
+    <a href="fotos/foto9.jpg" data-lightbox="principales">
       <img src="fotos/foto9.jpg" alt="Foto 9">
     </a>
     <a href="fotos/foto3.jpg" data-lightbox="principales">
