--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
   </div>
     <div class="fotos-principales">
     <a href="fotos/foto36.webp" data-lightbox="principales">
-      <img src="fotos/foto36.webp" alt="Sesion 1">
+      <img src="fotos/foto36.webp" alt="foto 36">
     </a>
     <a href="fotos/foto37.webp" data-lightbox="principales">
-      <img src="fotos/foto37.webp" alt="Sesion 2">
+      <img src="fotos/foto37.webp" alt="foto 37">
     </a>
     <a href="fotos/foto38.webp" data-lightbox="principales">
-      <img src="fotos/foto38.webp" alt="Sesion 4">
+      <img src="fotos/foto38.webp" alt="foto 38">
     </a>
   </div>
   <div class="fotos-principales">
