--- a/index.html
+++ b/index.html
@@ -7,156 +7,75 @@
   <title>Francisco Alarcon | Fotógrafo</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
+  <style>
+    .oculto {
+      display: none;
+    }
+  </style>
 </head>
 <body>
   <header>
     <img src="img/logo-francisco.png" alt="Logo Francisco Alarcon" class="logo">
     <section id="portafolio">
-     <h1> FranciscoPhotographer </h1>
-     <p class= "especialidad">
-      Especialista en retrato,bodas y eventos sociales </p>
-      </section>
+      <h1> FranciscoPhotographer </h1>
+      <p class="especialidad">
+        Especialista en retrato, bodas y eventos sociales
+      </p>
+    </section>
     <nav>
       <a href="#sobre-mi">Sobre mí</a>
       <a href="#galeria-principal">Galería</a>
       <a href="#contacto">Contacto</a>
     </nav>
   </header>
-  
+
   <section id="sobre-mi" class="section">
     <h2>Sobre mí</h2>
-    <p>¡Hola! Soy Francisco Alarcon un fotógrafo apasionado por capturar emociones y contar historias visuales. Trabajo en retratos, bodas y eventos sociales. Cada imagen que capturo busca transmitir belleza, autenticidad y alma.</p>
+    <p>¡Hola! Soy Francisco Alarcon, un fotógrafo apasionado por capturar emociones y contar historias visuales. Trabajo en retratos, bodas y eventos sociales. Cada imagen que capturo busca transmitir belleza, autenticidad y alma.</p>
   </section>
 
-<section id="galeria-principal" class="section">
-  <h2>Galeria-Clientes</h2>
-  <div class="fotos-principales">
-    <a href="fotos/foto1.webp" data-lightbox="principales">
-      <img src="fotos/foto1.webp" alt="Foto 1">
-    </a>
-    <a href="fotos/foto2.webp" data-lightbox="principales">
-      <img src="fotos/foto2.webp" alt="Foto 2">
-    </a>
-    <a href="fotos/foto3.webp" data-lightbox="principales">
-      <img src="fotos/foto3.webp" alt="Foto 3">
-    </a>
-  </div>
+  <section id="galeria-principal" class="section">
+    <h2>Galería-Clientes</h2>
+
     <div class="fotos-principales">
-    <a href="fotos/foto36.webp" data-lightbox="principales">
-      <img src="fotos/foto36.webp" alt="foto 36">
-    </a>
-    <a href="fotos/foto37.webp" data-lightbox="principales">
-      <img src="fotos/foto37.webp" alt="foto 37">
-    </a>
-    <a href="fotos/foto38.webp" data-lightbox="principales">
-      <img src="fotos/foto38.webp" alt="foto 38">
-    </a>
-  </div>
-  <div class="fotos-principales">
-    <a href="fotos/foto5.webp" data-lightbox="principales">
-      <img src="fotos/foto5.webp" alt="Foto 5">
-    </a>
-    <a href="fotos/foto6.webp" data-lightbox="principales">
-      <img src="fotos/foto6.webp" alt="Foto 6">
-    </a>
-    <a href="fotos/foto7.webp" data-lightbox="principales">
-      <img src="fotos/foto7.webp" alt="Foto 7">
-    </a>
-      <div class="fotos-principales">
-    <a href="fotos/foto8.webp" data-lightbox="principales">
-      <img src="fotos/foto8.webp" alt="Foto 8">
-    </a>
-    <a href="fotos/foto9.jpg" data-lightbox="principales">
-      <img src="fotos/foto9.jpg" alt="Foto 9">
-    </a>
-    <a href="fotos/foto3.jpg" data-lightbox="principales">
-      <img src="fotos/foto10.jpg" alt="Foto 10">
-    </a>
-    <div class="fotos-principales">
-    <a href="fotos/foto22.jpg" data-lightbox="principales">
-      <img src="fotos/foto22.jpg" alt="Foto 22">
-    </a>
-    <a href="fotos/foto23.jpg" data-lightbox="principales">
-      <img src="fotos/foto23.jpg" alt="Foto 23">
-    </a>
-    <a href="fotos/foto24.jpg" data-lightbox="principales">
-      <img src="fotos/foto24.jpg" alt="Foto 24">
-    </a>
-  </div>
-  <div class="fotos-principales">
-    <a href="fotos/foto12.jpg" data-lightbox="principales">
-      <img src="fotos/foto12.jpg" alt="Foto 12">
-    </a>
-    <a href="fotos/foto13.jpg" data-lightbox="principales">
-      <img src="fotos/foto13.jpg" alt="Foto 13">
-    </a>
-    <a href="fotos/foto14.jpg" data-lightbox="principales">
-      <img src="fotos/foto14.jpg" alt="Foto 14">
-    </a>
-    <div class="fotos-principales">
-    <a href="fotos/foto15.jpg" data-lightbox="principales">
-      <img src="fotos/foto15.jpg" alt="Foto 15">
-    </a>
-    <a href="fotos/foto16.jpg" data-lightbox="principales">
-      <img src="fotos/foto16.jpg" alt="Foto 16">
-    </a>
-    <a href="fotos/foto17.jpg" data-lightbox="principales">
-      <img src="fotos/foto17.jpg" alt="Foto 17">
-    </a>
-    <div class="fotos-principales">
-    <a href="fotos/foto18.jpg" data-lightbox="principales">
-      <img src="fotos/foto18.jpg" alt="Foto 18">
-    </a>
-    <a href="fotos/foto19.jpg" data-lightbox="principales">
-      <img src="fotos/foto19.jpg" alt="Foto 19">
-    </a>
-    <a href="fotos/foto20.jpg" data-lightbox="principales">
-      <img src="fotos/foto20.jpg" alt="Foto 20">
-      <div class="fotos-principales">
-    <a href="fotos/foto21.jpg" data-lightbox="principales">
-      <img src="fotos/foto21.jpg" alt="Foto 21">
-    </a>
-    <a href="fotos/foto25.jpg" data-lightbox="principales">
-      <img src="fotos/foto25.jpg" alt="Foto 25">
-    </a>
-    <a href="fotos/foto26.jpg" data-lightbox="principales">
-      <img src="fotos/foto26.jpg" alt="Foto 26">
-    </a>
-    <div class="fotos-principales">
-    <a href="fotos/foto27.jpg" data-lightbox="principales">
-      <img src="fotos/foto27.jpg" alt="Foto 27">
-    </a>
-    <a href="fotos/foto28.jpg" data-lightbox="principales">
-      <img src="fotos/foto28.jpg" alt="Foto 28">
-    </a>
-    <a href="fotos/foto29.jpg" data-lightbox="principales">
-      <img src="fotos/foto29.jpg" alt="Foto 29">
-    </a>
-  </div>
-  <div class="fotos-principales">
-    <a href="fotos/foto30.jpg" data-lightbox="principales">
-      <img src="fotos/foto30.jpg" alt="Foto 30">
-    </a>
-    <a href="fotos/foto31.jpg" data-lightbox="principales">
-      <img src="fotos/foto31.jpg" alt="Foto 31">
-    </a>
-    <a href="fotos/foto32.jpg" data-lightbox="principales">
-      <img src="fotos/foto32.jpg" alt="Foto 32">
-    </a>
-  </div>
-    <div class="fotos-principales">
-    <a href="fotos/foto33.jpg" data-lightbox="principales">
-      <img src="fotos/foto33.jpg" alt="Foto 33">
-    </a>
-    <a href="fotos/foto34.jpg" data-lightbox="principales">
-      <img src="fotos/foto34.jpg" alt="Foto 34">
-    </a>
-    <a href="fotos/foto35.jpg" data-lightbox="principales">
-      <img src="fotos/foto35.jpg" alt="Foto 35">
-    </a>
-  </div>
+      <a href="fotos/foto1.webp" data-lightbox="principales"><img src="fotos/foto1.webp" alt="Foto 1"></a>
+      <a href="fotos/foto2.webp" data-lightbox="principales"><img src="fotos/foto2.webp" alt="Foto 2"></a>
+      <a href="fotos/foto3.webp" data-lightbox="principales"><img src="fotos/foto3.webp" alt="Foto 3"></a>
     </div>
-</section>
+
+    <button class="mostrar-mas-btn" onclick="mostrarMasFotos('galeria-extra-1', this)">Mostrar más fotos</button>
+    <div id="galeria-extra-1" class="fotos-principales oculto">
+      <a href="fotos/foto.webp" data-lightbox="principales"><img src="fotos/foto.webp" alt="Foto 5"></a>
+      <a href="fotos/foto.webp" data-lightbox="principales"><img src="fotos/foto.webp" alt="Foto 6"></a>
+      <a href="fotos/foto.webp" data-lightbox="principales"><img src="fotos/foto.webp" alt="Foto 7"></a>
+    </div>
+
+    <div class="fotos-principales">
+      <a href="fotos/foto5.webp" data-lightbox="principales"><img src="fotos/foto5.webp" alt="Foto 5"></a>
+      <a href="fotos/foto6.webp" data-lightbox="principales"><img src="fotos/foto6.webp" alt="Foto 6"></a>
+      <a href="fotos/foto7.webp" data-lightbox="principales"><img src="fotos/foto7.webp" alt="Foto 7"></a>
+    </div>
+
+    <button class="mostrar-mas-btn" onclick="mostrarMasFotos('galeria-extra-2', this)">Mostrar más fotos</button>
+    <div id="galeria-extra-2" class="fotos-principales oculto">
+      <a href="fotos/foto.webp" data-lightbox="principales"><img src="fotos/foto.webp" alt="Foto 10"></a>
+      <a href="fotos/foto.webp" data-lightbox="principales"><img src="fotos/foto.webp" alt="Foto 11"></a>
+      <a href="fotos/foto.webp" data-lightbox="principales"><img src="fotos/foto.webp" alt="Foto 12"></a>
+    </div>
+
+    <div class="fotos-principales">
+      <a href="fotos/foto8.webp" data-lightbox="principales"><img src="fotos/foto8.webp" alt="Foto 8"></a>
+      <a href="fotos/foto9.webp" data-lightbox="principales"><img src="fotos/foto9.webp" alt="Foto 9"></a>
+      <a href="fotos/foto10.webp" data-lightbox="principales"><img src="fotos/foto10.webp" alt="Foto 10"></a>
+    </div>
+
+    <button class="mostrar-mas-btn" onclick="mostrarMasFotos('galeria-extra-3', this)">Mostrar más fotos</button>
+    <div id="galeria-extra-3" class="fotos-principales oculto">
+      <a href="fotos/foto.webp" data-lightbox="principales"><img src="fotos/foto.webp" alt="Foto 10"></a>
+      <a href="fotos/foto.webp" data-lightbox="principales"><img src="fotos/foto.webp" alt="Foto 11"></a>
+      <a href="fotos/foto.webp" data-lightbox="principales"><img src="fotos/foto.webp" alt="Foto 12"></a>
+    </div>
+  </section>
 
   <section id="contacto" class="section contacto">
     <h2>Contacto</h2>
@@ -176,7 +95,7 @@
       <input type="hidden" name="_next" value="https://franph16.github.io/portafolio-francisco/gracias.html">
     </form>
   </section>
-      
+
   <section class="qr-section">
     <h2>Escaneá el QR para ver mi portafolio</h2>
     <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://franph16.github.io/portafolio-francisco/" alt="QR del portafolio">
@@ -192,39 +111,11 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
   <script>
-    document.querySelectorAll('.mostrar-btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        const target = document.getElementById(btn.dataset.target);
-        if (target) {
-          target.classList.toggle('visible');
-        }
-      });
-    });
-  </script>
-  <!-- Botón para volver al principio -->
-<button id="scrollToTopBtn" title="Volver arriba">↑</button>
-
-<script>
-  // Obtener el botón
-  const scrollToTopBtn = document.getElementById("scrollToTopBtn");
-
-  // Mostrar el botón cuando el usuario hace scroll hacia abajo
-  window.onscroll = function () {
-    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-      scrollToTopBtn.style.display = "block";
-    } else {
-      scrollToTopBtn.style.display = "none";
+    function mostrarMasFotos(id, boton) {
+      const galeria = document.getElementById(id);
+      galeria.classList.toggle("oculto");
+      boton.textContent = galeria.classList.contains("oculto") ? "Mostrar más fotos" : "Ocultar fotos";
     }
-  };
-  scrollToTopBtn.addEventListener("click", function () {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-  });
-</script>
-
-<div id="cookie-consent" class="cookie-consent">
-  <p>Este sitio web usa cookies para mejorar tu experiencia. <a href="#">Más información</a>.</p>
-  <button id="accept-cookies">Aceptar</button>
-</div>
-<script src="cookies.js" defer></script>
+  </script>
 </body>
 </html>
