--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
 </head>
 <body>
   <header>
-    <img src="img/logo-francisco.png" alt="Logo Francisco Alarcon" class="logo">
+    <img src="img/logo-francisco2.png" alt="Logo Francisco Alarcon" class="logo">
     <section id="portafolio">
-      <h1> FranciscoPhotographer </h1>
-      <p class="especialidad">
-        Especialista en retrato, bodas y eventos sociales
-      </p>
     </section>
     <nav>
       <a href="#sobre-mi">Sobre mí</a>
@@ -31,7 +27,7 @@
 
   <section id="sobre-mi" class="section">
     <h2>Sobre mí</h2>
-    <p>¡Hola! Soy Francisco Alarcon, un fotógrafo apasionado por capturar emociones y contar historias visuales. Trabajo en retratos, bodas y eventos sociales. Cada imagen que capturo busca transmitir belleza, autenticidad y alma.</p>
+    <p>¡Hola! Soy Francisco Alarcon, un fotógrafo apasionado por capturar emociones y contar historias visuales. Trabajo en retratos, bodas, cumpleaños y eventos sociales. Cada imagen que capturo busca transmitir belleza, autenticidad y alma.</p>
   </section>
 
   <section id="galeria-principal" class="section">
